--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -10,5 +10,7 @@
 <div>
   <h2>{{ product.title }}</h2>
   <p>{{ product.description }}</p>
+  <img src="../{{ product.image }}"></img>
+
 </div>
 {% endblock content %}
